@@ -917,7 +917,22 @@ gap> HomogeneousCatenaryDegreeOfNumericalSemigroup(s);
   The set of divisors of <M>n</M> in <M>S</M> will be denoted by <M>\mathrm{D}_S(n)</M>.  If we are given <M>n_1,\ldots,n_r\in S</M>, the set of the divisors of these elements is <M>\mathrm{D}(n_1,\ldots, n_r)= \bigcup_{i=1}^r \mathrm{D}(n_i)</M>.<P/>
 
 
-    For a numerical semigroup <M>S</M>, we can define the sequence <M>\{\nu_i\}_{i\ge 1}</M>, with <M>\nu_i</M> the number of divisors of the <M>i</M>th element in <M>S</M>. It can be shown that the first <M>2g-c</M> elements of the sequence uniquely determine the semigroup (with <M>c</M> the conductor of <M>S</M> and <M>g</M> its genus), see <Cite Key="bras-ns-codes"/>.
+    For a numerical semigroup <M>S</M>, we can define the sequence <M>\{\nu_i\}_{i\ge 1}</M>, with <M>\nu_i</M> the number of divisors of the <M>i</M>th element in <M>S</M>. It can be shown that the first <M>2g-c</M> elements of the sequence uniquely determine the semigroup (with <M>c</M> the conductor of <M>S</M> and <M>g</M> its genus), see <Cite Key="bras-ns-codes"/>.<P/>
+
+    There is another sequence associated to divisors that also determines the semigroup. Let <M>S=\{\lambda_0=0 &lt; \lambda_1  \dots\}</M> be a numerical semigroup. We can define the following binary operation on <M>\mathbb{N}</M>: <M>i\oplus_S i=k</M>, where <M>k</M> is such that <M>\lambda_i+\lambda_j=\lambda_k</M>. Set <M>\tau_i=\max\{ j\in \mathbb{N}: \hbox{ exists } k\in\{j,\ldots,i\} \hbox{ with } j\oplus_S k=i\}</M>. The first <M>2c-g+1</M> determine uniquely <M>S</M> (see <Cite Key="bras-ns-codes"/>).<P/> 
+
+    Translated to code, the definition of <M>\tau_i</M> could be as follows.
+
+    <Example><![CDATA[
+TauNS := function(i,S)
+    local d, D, si;
+    D:=DivisorsOfElementInNumericalSemigroup(S[i+1],S);
+    si:=S[i+1];
+    d:=Maximum(Intersection(D,[0..Int(si/2)]));
+    return NumberElement_NumericalSemigroup(S,d)-1;
+end;
+]]></Example>
+
     <ManSection>
         <Func Arg="S,n" Name="MoebiusFunctionAssociatedToNumericalSemigroup"></Func>
         <Description>
@@ -964,7 +979,7 @@ gap> DivisorsOfElementInNumericalSemigroup(s,20);
 [ 0, 5, 10, 15, 20 ]
 gap> DivisorsOfElementInNumericalSemigroup(20,s);
 [ 0, 5, 10, 15, 20 ]
-              ]]></Example>
+]]></Example>
         </Description>
     </ManSection>
 
@@ -974,7 +989,7 @@ gap> DivisorsOfElementInNumericalSemigroup(20,s);
         <Description>
 	    <A>nuseq</A> is a list of integers that represents a <M>\nu</M>-sequence, that is, the <M>i</M>th element in the sequence is the number of divisors of the <M>i</M>th element in a certain numerical semigroup. Though the sequence is finite, it is understood that from the last element every entry increases exactly by one. <P/>
         
-        The output is the only numerical semigroup whose <M>\nu</M> sequence is <M><A>nusec</A>\cup \{k,k+1, \ldots\}</M> (with <M>k</M> the last element of <A>nusec</A>).  <P/>
+        The output is the only numerical semigroup whose <M>\nu</M>-sequence is <M><A>nusec</A>\cup \{k,k+1, \ldots\}</M> (with <M>k</M> the last element of <A>nusec</A>).  <P/>
 
         The implementation is inspired in Theorem 1.54 in <Cite Key="bras-ns-codes"/>.
 
@@ -986,7 +1001,26 @@ gap> NuSequence(s);
 [ 1, 2, 2, 3, 2, 4, 3, 4, 4, 6, 4, 6, 5, 8, 9, 8, 9, 10, 12, 12 ]
 gap> s=NumericalSemigroupByNuSequence(last);
 true
-              ]]></Example>
+]]></Example>
+        </Description>
+    </ManSection>
+
+
+    <ManSection>
+        <Func Arg="tauseq" Name="NumericalSemigroupByTauSequence"/>
+        <Description>
+	    <A>tauseq</A> is a list of integers that represents a <M>\tau</M>-sequence. Though the sequence is finite, it is understood that <M>\tau_{k+2i} = \tau_{k+2i+1}</M>, with <M>k</M> the length of the list, and this amount increases by one as <M>i</M> increases. <P/>
+        
+        The output is the only numerical semigroup whose <M>\tau</M>-sequence is <M><A>tausec</A>\cup \{l+1,l+1,l+2,l+2, \ldots\}</M> (with <M>l</M> the last element of <A>tausec</A>).  <P/>
+
+        The implementation is inspired in Theorem 1.60 in <Cite Key="bras-ns-codes"/>.
+
+            <Example><![CDATA[
+gap> tau:=[ 0, 0, 0, 0, 1, 1, 2, 2, 3, 0, 1, 2, 3, 3, 3, 3, 4, 4 ];
+[ 0, 0, 0, 0, 1, 1, 2, 2, 3, 0, 1, 2, 3, 3, 3, 3, 4, 4 ]
+gap> MinimalGenerators(NumericalSemigroupByTauSequence(tau));
+[ 6, 7, 8, 17 ]
+]]></Example>
         </Description>
     </ManSection>
 
