@@ -256,7 +256,7 @@ Helena helped in the implementation of the code for ideals of affine semigroups 
 </Section>
 
 <Section><Heading>Functions implemented by J. Angulo Rodríguez</Heading>
-Jorge implemented the code corresponding to decompositions of ideals into irreducibles <Ref Sect="sec:decomposition-irreducibles"/>. He also implemented a preliminary version of <Ref Func="NumericalSemigroupByNuSequence"/>.
+Jorge implemented the code corresponding to decompositions of ideals into irreducibles <Ref Sect="sec:decomposition-irreducibles"/>. He also implemented <Ref Func="NumericalSemigroupByNuSequence"/> and <Ref Func="NumericalSemigroupByTauSequence"/>.
 
 
 </Section>
